# virtual-wallet

./: .gitignore  .gitlab-ci.yml  README.MD  README.md  database.db  docker-compose.yml  docker_compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
app/: __init__.py  data.py  models.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/auth/: auth.py
app/core/: config.py  init_data.py  security copy.py  security_copy.py
app/crud/: __init__.py  base.py  crud_card.py  crud_mail.py  crud_transaction.py  crud_user.py  crud_wallet.py
app/db/: session.py
app/email-templates/src/: new_account.mjml
app/error_models/: __init__.py  card_errors.py  user_errors.py
app/helpers/: currency_exchange.py  snowflake_ids.py
app/models/: __init__.py  card.py  currency.py  scope.py  token.py  transaction.py  user.py  wallet.py
app/routers/api/: transactions.py  users.py  wallets.py
app/services/: card_services.py  mail_services.py  user_services.py  wallet_services.py
app/static/html/: email_verify.html
app/test/: test_card.py
app/tests/: conftest.py
app/tests/utils/: utils.py
backend/: .dockerignore  .gitignore  Dockerfile  NEWREADME.MD  main.py  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  utils.py
backend/scripts/: AES_key.py  diagram_db.mwb
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  shared.js  shared.ts
scripts/: diagram_db.mwb.bak  fernet_key.py
(+113 files in other folders)
