[tool.poetry]
name = "virtual-wallet"
version = "0.1.0"
description = ""
authors = ["Stanislav Milchev and Blagoy Pavlov <milchev.st@gmail.com & pavlov_blago@yahoo.com>"]
readme = "README.md"
packages = [{include = "virtual_wallet"}]

[tool.poetry.dependencies]
python = "^3.11"
currencies = "^2020.12.12"
anyio = "^3.6.2"
requests = "^2.30.0"
click = "^8.1.3"
black = "^23.3.0"
email-validator = "^2.0.0.post2"
fastapi = "^0.95.2"
mariadb = "^1.1.6"
uvicorn = "^0.22.0"
colorama = "^0.4.6"
dnspython = "^2.3.0"
greenlet = "^2.0.2"
h11 = "^0.14.0"
idna = "^3.4"
packaging = "^23.1"
pydantic = "^1.10.7"
sniffio = "^1.3.0"
snowflake-id = "^0.0.2"
SQLAlchemy = "^2.0.13"
starlette = "^0.27.0"
mypy = "^1.3.0"
typing-extensions = "^4.5.0"


[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
target-version = ['py39']
max-line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
